Fixes #555 - Hard to scroll legend on mobile device

--- a/IsraelHiking.Web/sources/application/components/sidebar/info-sidebar.component.css
+++ b/IsraelHiking.Web/sources/application/components/sidebar/info-sidebar.component.css
@@ -20,6 +20,8 @@
 .legend-item-text-container {
     padding-left: 10px;
     padding-right: 10px;
+    touch-action: inherit !important;
+    -webkit-user-drag: inherit !important;
 }
 
 .legend-item-text {
